# chess

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  chess.cxx  chess.h  move_generation.cxx  move_generation.h  print_board.cxx  print_board.h  readme.md
move_gen/: Makefile  gen_moves_list.cxx
src/: move_generation.cxx  move_generation.h  types.h
src/backend/: web_backend.cxx
src/tui/: chess.cxx  print_board.cxx  print_board.h  print_board.h.gch
utils/: gen_moves_list.cxx
